# labki

./: CMakeLists.txt  Organizm.cpp  Organizm.h  Swiat.cpp  Swiat.h  main.cpp  ncurses_app
zwierzeta/: Antylopa.cpp  Antylopa.h  Lis.cpp  Lis.h  Owca.cpp  Owca.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierzeta.cpp  Zwierzeta.h
